# coursework-compiler

./: Cargo.toml  README.md  build.rs
assets/: io.rs
examples/: misopt-1.lang  simple.lang
outputs/: gen_simple.nasm  gen_simple_opt.nasm  misopt-1.lasm  simple.lasm  simple_constprop.lasm  simple_deadblock.lasm  simple_deadcode.lasm
src/: main.rs
src/codegen/: asm.rs  emit.rs  mod.rs  tests.rs
src/ir/: mod.rs  transform.rs  types.rs
src/ir/opt/: const_prop.rs  dead_block.rs  dead_code.rs  mod.rs
src/ir/tests/: mod.rs  opt.rs  transform.rs
src/ir/util/: graphs.rs  mod.rs  traversal.rs
src/parser/: ast.rs  language.lalrpop  mod.rs  tests.rs  typecheck.rs
