[package]
name = "coursework-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
derive_more = "0.99"
faerie = "0.16"
iced-x86 = { version = "1.15", features = ["code_asm"] }
lalrpop-util = { version = "0.19", features = ["lexer"] }
regex = "1.5"
rustc_index = { git = "https://github.com/rust-lang/rust.git", branch = "stable" }
rustc_serialize = { git = "https://github.com/rust-lang/rust.git", branch = "stable" }
